<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/inicio"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/inmuebleFragment"
            android:icon="@drawable/inmobiliaria"
            android:title="@string/inmuebles" />
        <item
            android:id="@+id/inquilinosFragment"
            android:icon="@drawable/inquilinos"
            android:title="@string/inquilinos" />
        <item
            android:id="@+id/contratosFragment"
            android:icon="@drawable/contratos"
            android:title="@string/contratos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>