<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lab3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lab3.ui.perfil.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.lab3.ui.logout.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/inmuebleFragment"
        android:name="com.example.lab3.ui.inmuebles.InmuebleFragment"
        android:label="fragment_inmueble"
        tools:layout="@layout/fragment_inmueble" />
    <fragment
        android:id="@+id/contratosFragment"
        android:name="com.example.lab3.ui.contratos.ContratosFragment"
        android:label="fragment_contratos"
        tools:layout="@layout/fragment_contratos" />
    <fragment
        android:id="@+id/inquilinosFragment"
        android:name="com.example.lab3.ui.Inquilinos.InquilinosFragment"
        android:label="fragment_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />
</navigation>